unwanted overflow fix

--- a/src/scss/abstracts/_placeholders.scss
+++ b/src/scss/abstracts/_placeholders.scss
@@ -1,7 +1,6 @@
 %link-hover {
   position: relative;
   overflow: hidden;
-  display: inline-block;
   color: #2B2B3D;
 
   &::before {
